--- a/ch07-Assignment/ch07-Assignment.vcxproj
+++ b/ch07-Assignment/ch07-Assignment.vcxproj
@@ -126,7 +126,10 @@
     <ClCompile Include="07-1.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="07-11.c" />
+    <ClCompile Include="07-12.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="07-18.c" />
     <ClCompile Include="07-2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
